--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 @layer base {
   * {
@@ -14,7 +16,7 @@
     color: whitesmoke;
     place-content: center;
     font-size: 150%;
-    font-family: "Roboto";
+    font-family: "Roboto", sans-serif;
   }
 }
 
