--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
 
 @layer base {
   * {
+    @apply p-0;
     margin: 0;
+    padding: 0;
     padding: 0.25rem;
     box-sizing: border-box;
   }
@@ -25,11 +27,11 @@
   }
 
   .grid-container {
-    @apply overflow-hidden max-h-80;
+    @apply overflow-hidden max-h-80 mb-2;
   }
 
   .grid {
-    @apply h-full w-full;
+    @apply h-full w-full p-0;
   }
 
   .slider-thumb::-webkit-slider-thumb {
